// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MPageNotFound should render correctly 1`] = `
<div>
    <div class="m-message m--is-warning m--is-skin-regular">
        <div class="m-message__wrap">
            <div class="m-message__icon">
                <svg aria-hidden="true" width="1em" height="1em" class="m-icon">
                    <use aria-hidden="true"></use>
                </svg>
            </div>
            <div class="m-message__body">
                <div class="m-message__body__content"><span class="m-i18n">m-page-not-found:message</span></div>
            </div>
        </div>
    </div>
    <p><span class="m-i18n">m-page-not-found:directions</span></p>
    <p></p>
    <a href="/" tabindex="1" class="m-link"> <span class="m-link__text">
        m-page-not-found:back-to-portal
    </span> </a>
</div>
`;

exports[`MPageNotFound should render correctly with back-to-label override 1`] = `
<div>
    <div class="m-message m--is-warning m--is-skin-regular">
        <div class="m-message__wrap">
            <div class="m-message__icon">
                <svg aria-hidden="true" width="1em" height="1em" class="m-icon">
                    <use aria-hidden="true"></use>
                </svg>
            </div>
            <div class="m-message__body">
                <div class="m-message__body__content"><span class="m-i18n">m-page-not-found:message</span></div>
            </div>
        </div>
    </div>
    <p><span class="m-i18n">m-page-not-found:directions</span></p>
    <p></p>
    <a href="/" tabindex="1" class="m-link"> <span class="m-link__text">
        Some back to label
    </span> </a>
</div>
`;
